2013-08-27 Added relative layout
2013-08-26 Page without tasks is calculated as 100% in score
2013-08-19 Added Text Selection module - enable to select parts of texts
2013-08-09 Fixed problem with too many change events from choice module
2013-08-09 Added cover page to book mode
2013-08-07 Updated modules descriptions
2013-08-05 Fixed problem with nonunicode characters pasted to text editor
2013-08-02 Check can be used on footer and header
2013-08-01 Fixed Open Popup Button in error checking mode
2013-08-01 Added show and hide commands to all button modules
2013-07-30 Fixed Video module visibility in popup page
2013-07-29 Fixed onEnd event in Video module
2013-07-26 Fixed problem with inline choice when selecting default value '---'
2013-07-26 Fixed problem with spaces in URL
2013-07-25 Added visibility commands in Standard Shapes module
2013-07-25 Added restoring visibility in Slideshow module
2013-07-22 Added 'Hide toolbar' property which hides default options toolbar and makes more space for text
2013-07-16 Fixed value change events in Table module gaps system
2013-07-05 Fixed a bug when event AllOk was sent even when wrong ranges were drawn
2013-07-05 Fixed problem when Check was not removing range end image in Line Number module
2013-07-04 Fixed problem when changing pages in Graph module
2013-07-04 Fixed drawing range bug in Line Number module
2013-07-03 Added Line Number module - used to draw X-axis ranges
2013-07-03 Updated Custom Scoring module icon
2013-07-02 Added event sending on playback finish to Video module
2013-07-01 Fixed problem with events from not activity gaps
2013-07-01 Fixed problem with disabled state for draggable gaps
2013-06-30 Improved performance in Slider module
2013-06-30 Fixed problem with Graph module loading
2013-06-29 Removed 'Show time' property from Video module
2013-06-28 Updated 3D Viewer module icon
2013-06-28 Fixed problem with audio resources in Slideshow module on Safari Mobile