@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="UTF-8" ?> 
+<textModule id="text" left='5' top='10' width='80.0' height='40.0' class="myText">
+	<text  isDisabled="true" isCaseSensitive="true">
+		&lt;p&gt;She {{2: likes | aaaaa aa | bbb bb }} him very much (like).&lt;/p&gt;
+		&lt;p&gt;She {{2: I don't like it | aaaaa aa | bbb bb }} him very much (like).&lt;/p&gt;
+		&lt;p&gt;I like to drive {{1:Volvo}}.&lt;/p&gt;
+	</text>
+</textModule>
