@@ -66,9 +66,10 @@ background-color:lightgreen;
 </style>
 
 <pages>
-	<page name="layout" href="pages/layout.page.xml"/>
-	<page name="layout2" href="pages/layout2.page.xml"/>
 	<page name="inline choice" href="pages/inline-choice.page.xml"/>
+	<page name="layout" href="pages/layout.page.xml"/>
+	<page name="cloze" href="pages/cloze.page.xml"/>
+	<page name="draggable" href="pages/draggable-gaps.page.xml"/>
 	<page name="schoice" href="pages/schoice.page.xml"/>
 	<page name="eventbus" href="pages/eventbus.page.xml"/>
 	<page name="image source" href="pages/image-source.xml"/>
@@ -82,8 +83,8 @@ background-color:lightgreen;
 		<page name="footer" href="pages/footer.xml"/>
 	</folder>
 	<!--
+	<page name="layout2" href="pages/layout2.page.xml"/>
 	<page name="problem" href="pages/problem.page.xml"/>
-	<page name="draggable" href="pages/draggable-gaps.page.xml"/>
 	<page name="problem" href="pages/problem.page.xml"/>
 	<page name="addon" href="pages/addon.page.xml"/>
 	<page name="links" href="pages/links.page.xml" reportable="false"/>
@@ -92,7 +93,6 @@ background-color:lightgreen;
 	<page name="no addon" href="pages/no-addon.page.xml"/>
 	<page name="vimeo" href="pages/vimeo.page.xml"/>
 	<page name="youtube" href="pages/youtube.page.xml"/>
-	<page name="cloze" href="pages/cloze.page.xml"/>
 	<page name="images" href="pages/images.xml"/>
 	<page name="goto" href="pages/goto.page.xml"/>
 	<page name="feedback addon" href="pages/feedback-addon.page.xml"/>
