@@ -3,7 +3,7 @@
 
 	<modules>
 		
-		<textModule id="dropdown1" left='5' top='10' width='80.0' height='20.0' class="myText">
+		<textModule id="dropdown1" left='5' top='10' width='600' height='200' class="myText">
 			<text isDisabled="false">
 				&lt;p&gt;She {{2: likes | \(a \ne 0\) | \(ax^2 + bx + c = 0\) }} him very much (like).&lt;/p&gt;
 				&lt;p&gt;She {{2: don't | aaaaa aa | bbb bb }} him very much (like).&lt;/p&gt;
@@ -11,28 +11,28 @@
 			</text>
 		</textModule>
 		
-		<textModule id="cloze1" left='5' top='30' width='80.0' height='20.0' class="myText">
+		<textModule id="cloze1" left='5' top='230' width='600' height='100' class="myText">
 			<text isDisabled="false"><![CDATA[median {{1:&lt;|=|&gt;}} mean {{1:&lt;|=|&gt;}} midrange]]></text>
 		</textModule>
 		
-		<pageProgressModule id="c3" left="5" top="52" width="40" height="5">
+		<pageProgressModule id="c3" left="5" top="350" width="150" height="50">
 		</pageProgressModule>
 
-		<checkCounterModule id="c1" left="50" top="52" width="5" height="5">
+		<checkCounterModule id="c1" left="250" top="350" width="50" height="50">
 		</checkCounterModule>
 		
-		<errorCounterModule id="c2" left="55" top="52" width="5" height="5">
+		<errorCounterModule id="c2" left="320" top="350" width="50" height="50">
 		</errorCounterModule>
 
-		<buttonModule  left="65" top="50" width="10" height="10" style="">
+		<buttonModule  left="350" top="350" width="50" height="50" style="">
 			<button type="checkAnswers" text=""/>
 		</buttonModule>
 		
-		<buttonModule  left="75" top="50" width="10" height="10" style="">
+		<buttonModule  left="460" top="350" width="50" height="50" style="">
 			<button type="reset" text=""/>
 		</buttonModule>
 		
-		<addonModule id="addon2" addonId="DebugAddon" left='20' top='70' width='80' height='20'>
+		<addonModule id="addon2" addonId="DebugAddon" left='50' top='500' width='200' height='100'>
 			<properties>
 				<property name="Text" type="string" value="Hello world!"/>
 				<property name="Picture" type="image" value="ala/ma/kota"/>
